# BorealOS

./: .gitignore  .markdownlint-cli2.jsonc  .yamllint.yml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  research_task.yml
.github/workflows/: check.yml  docs.yml
boreal_setup/: main.sh
boreal_setup/lib/: apt.sh  flatpak.sh  log.sh  prompts.sh  require.sh
boreal_setup/profiles/: developer.sh  gaming.sh  laptop.sh  privacy.sh
config/: borealos.env.example
docs/: ANDROID_BUILD_NOTES.md  BUILD_ENVIRONMENT.md  CLI.md  LABELS.md  LINEAGEOS_SETUP.md  OVERVIEW.md  contributing.md  profiles.md  roadmap.md
manifests/: README.md
scripts/: borealos-doctor.sh  check.sh  init-lineageos-workspace.sh  sync-lineageos.sh
tests/: conftest.py  test_cli.py  test_config.py  test_doctor.py  test_workspace.py
tools/borealos_cli/: __init__.py  __main__.py  cli.py  config.py  doctor.py  workspace.py
